--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             </span>
         </div>
-        <ul class="w-full hidden text-left bg-slate-700 md:text-right md:block md:bg-slate-900">
+        <ul class="w-full hidden text-left tracking-widest bg-slate-700 md:text-right md:block md:bg-slate-900">
             <a href="#"><li class="block md:inline-block hover:bg-slate-800 hover:text-teal-500">Home</li></a>
             <a href="#"><li class="block md:inline-block hover:bg-slate-800 hover:text-teal-500">About</li></a>
             <a href="#"><li class="block md:inline-block hover:bg-slate-800 hover:text-teal-500">News</li></a>
