--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="https://kit.fontawesome.com/3860fe2cb5.js" crossorigin="anonymous"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
     <script src="javascript.js" type="text/javascript"></script>
@@ -28,16 +27,17 @@
 
 
             <span class="text-4xl cursor-pointer text-left block md:hidden">
-                <ion-icon name="menu" onclick="Menu(this)"></ion-icon>
+                <i id="menu" onclick="Menu(this)" class="fa-solid fa-bars hover:text-teal-500"></i>
+               
 
             </span>
         </div>
         <ul class="w-full hidden text-left tracking-widest bg-slate-700 md:text-right md:block md:bg-slate-900">
-            <a href="#"><li class="block md:inline-block hover:bg-slate-800 hover:text-teal-500">Home</li></a>
-            <a href="#"><li class="block md:inline-block hover:bg-slate-800 hover:text-teal-500">About</li></a>
-            <a href="#"><li class="block md:inline-block hover:bg-slate-800 hover:text-teal-500">News</li></a>
-            <a href="#"><li class="block md:inline-block hover:bg-slate-800 hover:text-teal-500">Contact</li></a>
-            <a href="#"><li class="block md:inline-block hover:bg-slate-800 hover:text-teal-500">Account</li></a>
+            <a href="#"><li class="block md:inline-block hover:bg-slate-800 hover:text-teal-500 ease-in-out duration-300">Home</li></a>
+            <a href="#"><li class="block md:inline-block hover:bg-slate-800 hover:text-teal-500 ease-in-out duration-300">About</li></a>
+            <a href="#"><li class="block md:inline-block hover:bg-slate-800 hover:text-teal-500 ease-in-out duration-300">News</li></a>
+            <a href="#"><li class="block md:inline-block hover:bg-slate-800 hover:text-teal-500 ease-in-out duration-300">Contact</li></a>
+            <a href="#"><li class="block md:inline-block hover:bg-slate-800 hover:text-teal-500 ease-in-out duration-300">Account</li></a>
         </ul>
     </nav>
 
@@ -47,7 +47,8 @@
             <div class="heading w-fit p-10  bg-slate-800 text-left m-auto md:mx-10">
                 <h2 class="font-bold text-lg md:text-3xl">Let's join to our Community</h2>
                 <h1 class="font-bold text-teal-500 text-3xl md:text-7xl ">Codebyter</h1>
-                <a href="#"><button class="bg-slate-900 hover:bg-teal-500">JOIN NOW!</button></a>
+
+                <a href="#"><button class="bg-slate-900 hover:bg-teal-500 ease-in-out duration-300">JOIN NOW!</button></a>
             </div>
 
             <div class="img p-5 m-10 my-auto">
@@ -64,17 +65,17 @@
                     <ul class="text-slate-400 text-2xl flex">
                         <li class="mx-3 my-auto hover:text-teal-500">
                             <a href="#">
-                                <ion-icon name="logo-facebook"></ion-icon></i>
+                                <i class="fa-brands fa-square-facebook"></i>
                             </a>
                         </li>
                         <li class="mx-3 my-auto hover:text-teal-500">
                             <a href="#">
-                                <ion-icon name="logo-instagram"></ion-icon>
+                                <i class="fa-brands fa-instagram"></i>
                             </a>
                         </li>
                         <li class="mx-3 my-auto hover:text-teal-500">
                             <a href="#">
-                                <ion-icon name="mail-outline"></ion-icon>
+                                <i class="fa-regular fa-envelope"></i>
                             </a>
                         </li>
 
