--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <footer class="w-full p-5 mt-20 bg-slate-900 text-white opacity-95 rounded md:rounded-full">
             <div class="md:flex text-center m-auto">
                 <div class="w-fit m-auto mb-5 md:mb-1">
-                    <p class="text-slate-400">Copyright @2022 | Josua Jake P. Saavedra</p>
+                    <p class="text-slate-400">Copyright &copy; 2022 | Josua Jake P. Saavedra</p>
                 </div>
                 <div class="w-fit m-auto">
                     <ul class="text-slate-400 text-2xl flex">
