--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="index">
 
 
-    <nav class="w-full bg-slate-900 text-white md:flex">
+    <nav class="w-full bg-slate-900 text-white md:flex items-center">
         <div class="logo flex w-full md:w-fit my-auto mx-auto px-5 py-2 md:py-1">
             <img class="w-20 h-10 font-[Poppins] cursor-pointer" src="assets/images/logo.png" alt="">
 
@@ -43,8 +43,8 @@
 
 
     <section class="w-full h-fit p-20 text-white">
-        <div class="card md:flex bg-slate-900 opacity-95">
-            <div class="heading w-fit p-10  bg-slate-800 text-left m-auto md:mx-10">
+        <div class="card md:flex items-center bg-slate-900 opacity-95">
+            <div class="heading w-fit px-5 py-10  bg-slate-800 text-left m-auto md:mx-10">
                 <h2 class="font-bold text-lg md:text-3xl">Let's join to our Community</h2>
                 <h1 class="font-bold text-teal-500 text-3xl md:text-7xl ">Codebyter</h1>
 
