--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                     About
                 </li>
             </a>
-            <a href="#">
+            <a href="news.html">
                 <li class="block md:inline-block hover:bg-slate-800 hover:text-teal-500 ease-in-out duration-300">News
                 </li>
             </a>
