--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <ul class="w-full hidden text-left tracking-widest bg-slate-700 md:text-right md:block md:bg-slate-900">
             <a href="#"><li class="block md:inline-block hover:bg-slate-800 text-teal-500 hover:text-teal-500 ease-in-out duration-300">Home</li></a>
             <a href="about.html"><li class="block md:inline-block hover:bg-slate-800 hover:text-teal-500 ease-in-out duration-300">About</li></a>
-            <a href="#"><li class="block md:inline-block hover:bg-slate-800 hover:text-teal-500 ease-in-out duration-300">News</li></a>
+            <a href="news.html"><li class="block md:inline-block hover:bg-slate-800 hover:text-teal-500 ease-in-out duration-300">News</li></a>
             <a href="#"><li class="block md:inline-block hover:bg-slate-800 hover:text-teal-500 ease-in-out duration-300">Contact</li></a>
             <a href="#"><li class="block md:inline-block hover:bg-slate-800 hover:text-teal-500 ease-in-out duration-300">Account</li></a>
         </ul>
